News UAT/force-app/main/default/objects/Contact/fields/mkto2__Original_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>mkto2__Original_Source_Type__c</fullName>
    <defaultValue>&quot;salesforce.com&quot;</defaultValue>
    <label>Original Source Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>