News UAT/force-app/main/default/objects/Contact/fields/mkto_si__Add_to_Marketo_Campaign__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__Add_to_Marketo_Campaign__c</fullName>
    <formula>HYPERLINK (&quot;/apex/mkto_si__Add_to_Marketo_Campaign_Mobile?contactType=Contact&amp;contactIds=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;Add to Marketo Campaign&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Add to Marketo Campaign</label>
    <type>Text</type>
</CustomField>