News UAT/force-app/main/default/objects/Contact/fields/mkto_si__Last_Interesting_Moment__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__Last_Interesting_Moment__c</fullName>
    <formula>IF(!ISNULL(mkto_si__Last_Interesting_Moment_Date__c), 
HYPERLINK(&quot;/apex/mkto_si__Contact_Full_List?view=IM&amp;id=&quot; &amp; Id, mkto_si__Last_Interesting_Moment_Type__c &amp; &quot; -- &quot; &amp; mkto_si__Last_Interesting_Moment_Desc__c ), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Interesting Moment</label>
    <type>Text</type>
</CustomField>