News UAT/force-app/main/default/objects/Contact/fields/mkto_si__Sales_Insight__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__Sales_Insight__c</fullName>
    <formula>HYPERLINK (&quot;/apex/Contact_Full_List?id=&quot; &amp; Id, IMAGE(&quot;https://www.marketo.com/salesforce/images/applicationLink.png&quot;,&quot;Sales Insight&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Insight</label>
    <type>Text</type>
</CustomField>