News UAT/force-app/main/default/objects/Contact/fields/Mobile_DNC_Contactable__c.field-meta.xml
<CustomField>
    <fullName>Mobile_DNC_Contactable__c</fullName>
    <description>This phone number is contactable if the the number is Not in DNC, has a Wash Date, and the Wash Date is at most 30 days from today</description>
    <formula>IF( 
Mobile_on_DNC__c = FALSE &amp;&amp; 
NOT ISBLANK(Mobile_DNC_Washed_Date__c) &amp;&amp; 
TODAY() - Mobile_DNC_Washed_Date__c &lt; 31, 
TRUE, FALSE 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This phone number is contactable if the the number is Not in DNC, has a Wash Date, and the Wash Date is at most 30 days from today</inlineHelpText>
    <label>Mobile DNC Contactable</label>
    <type>Checkbox</type>
</CustomField>