News UAT/force-app/main/default/objects/Contact/fields/Mobile_DNC_Status__c.field-meta.xml
<CustomField>
    <fullName>Mobile_DNC_Status__c</fullName>
    <formula>IF(
  Mobile_DNC_Contactable__c = TRUE,
      IMAGE(&#39;/img/func_icons/util/checkmark16.gif&#39;,&#39;&#39;,16,16) &amp; &quot; Washed @ &quot; &amp; TEXT(Mobile_DNC_Washed_Date__c),

  IF(
    Mobile_DNC_Contactable__c = FALSE &amp;&amp; NOT ISBLANK(Mobile_DNC_Washed_Date__c),
    IMAGE(&#39;/img/func_icons/remove12.gif&#39;,&#39;On DNC list!&#39;,12,12) &amp; &quot; Washed @&quot; &amp; TEXT(Mobile_DNC_Washed_Date__c),

    IF(
      Mobile_DNC_Contactable__c = FALSE &amp;&amp; ISBLANK(Mobile_DNC_Washed_Date__c),
        IMAGE(&#39;/img/func_icons/remove12.gif&#39;,&#39;&#39;,12,12) &amp; &quot;  - But no washed date&quot;,
      &quot;&quot;
    )
  )
)</formula>
    <label>Mobile DNC Status</label>
    <type>Text</type>
</CustomField>