News UAT/force-app/main/default/objects/Contact/fields/Mobile_DNC_Washed_Date__c.field-meta.xml
<CustomField>
    <fullName>Mobile_DNC_Washed_Date__c</fullName>
    <label>Mobile DNC Washed Date</label>
    <type>Date</type>
</CustomField>