News UAT/force-app/main/default/objects/Contact/fields/Mobile_on_DNC__c.field-meta.xml
<CustomField>
    <fullName>Mobile_on_DNC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile on DNC?</label>
    <type>Checkbox</type>
</CustomField>