News UAT/force-app/main/default/objects/Contact/fields/NewsAdds_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>NewsAdds_Contact_ID__c</fullName>
    <label>NewsAdds Contact ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>