News UAT/force-app/main/default/objects/Contact/fields/NewsAdds_Draft_Contact__c.field-meta.xml
<CustomField>
    <fullName>NewsAdds_Draft_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is updated from NewsAdds platform. When the field is checked, the record will require some more fields to be automatically updated from NewsAdds.</description>
    <inlineHelpText>Field is updated from NewsAdds platform. When the field is checked, the record will require some more fields to be automatically updated from NewsAdds.</inlineHelpText>
    <label>NewsAdds Draft Contact</label>
    <type>Checkbox</type>
</CustomField>