News UAT/force-app/main/default/objects/Contact/fields/NewsAdds_Registration_ID__c.field-meta.xml
<CustomField>
    <fullName>NewsAdds_Registration_ID__c</fullName>
    <inlineHelpText>The registration ID sent via email to the customer when they create a NewsAdds account.</inlineHelpText>
    <label>NewsAdds Registration ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>