News UAT/force-app/main/default/objects/Contact/fields/NewsXtend_My_Account_Access__c.field-meta.xml
<CustomField>
    <fullName>NewsXtend_My_Account_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to enable access to the My Account Community</description>
    <inlineHelpText>Used to enable access to the My Account Community</inlineHelpText>
    <label>NewsXtend My Account Access</label>
    <type>Checkbox</type>
</CustomField>