News UAT/force-app/main/default/objects/Contact/fields/NewsXtend_Outstanding_Tasks__c.field-meta.xml
<CustomField>
    <fullName>NewsXtend_Outstanding_Tasks__c</fullName>
    <description>This field will be used by Batch Application, to update the Oustanding Task List, so that this can be plugged in Template and send to customer</description>
    <label>NewsXtend Outstanding Tasks</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>