News UAT/force-app/main/default/objects/Contact/fields/No_Email__c.field-meta.xml
<CustomField>
    <fullName>No_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Email</label>
    <type>Checkbox</type>
</CustomField>