News UAT/force-app/main/default/objects/Contact/fields/NVMConnect__NextContactTime__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__NextContactTime__c</fullName>
    <description>Until the specified time, this record won&#39;t be considered when refreshing Dial Lists.</description>
    <inlineHelpText>Until the specified time, this record won&#39;t be considered when refreshing Dial Lists.</inlineHelpText>
    <label>Next Contact Time</label>
    <type>DateTime</type>
</CustomField>