News UAT/force-app/main/default/objects/Contact/fields/Other_Phone_DNC_Washed_Date__c.field-meta.xml
<CustomField>
    <fullName>Other_Phone_DNC_Washed_Date__c</fullName>
    <label>Other Phone DNC Washed Date</label>
    <type>Date</type>
</CustomField>