News UAT/force-app/main/default/objects/Contact/fields/Other_Phone_on_DNC__c.field-meta.xml
<CustomField>
    <fullName>Other_Phone_on_DNC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Phone on DNC?</label>
    <type>Checkbox</type>
</CustomField>