News UAT/force-app/main/default/objects/Contact/fields/Phone_on_DNC__c.field-meta.xml
<CustomField>
    <fullName>Phone_on_DNC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone on DNC?</label>
    <type>Checkbox</type>
</CustomField>