News UAT/force-app/main/default/objects/Contact/fields/Phones_Combined__c.field-meta.xml
<CustomField>
    <fullName>Phones_Combined__c</fullName>
    <formula>AssistantPhone &amp;
IF(BEGINS(AssistantPhone,&#39;+61&#39;),&#39;0&#39; &amp; RIGHT(AssistantPhone,LEN(AssistantPhone)-3),&#39;&#39;)
&amp;
HomePhone &amp;
IF(BEGINS(HomePhone ,&#39;+61&#39;),&#39;0&#39; &amp; RIGHT(HomePhone ,LEN(HomePhone )-3),&#39;&#39;)
&amp;
MobilePhone &amp;
IF(BEGINS(MobilePhone ,&#39;+61&#39;),&#39;0&#39; &amp; RIGHT(MobilePhone ,LEN(MobilePhone )-3),&#39;&#39;)
&amp;
OtherPhone &amp;
IF(BEGINS(OtherPhone ,&#39;+61&#39;),&#39;0&#39; &amp; RIGHT(OtherPhone ,LEN(OtherPhone )-3),&#39;&#39;)
&amp;
Phone &amp;
IF(BEGINS(Phone ,&#39;+61&#39;),&#39;0&#39; &amp; RIGHT(Phone ,LEN(Phone )-3),&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phones Combined</label>
    <type>Text</type>
</CustomField>