News UAT/force-app/main/default/objects/Contact/fields/Recent_Lead_Source_Date__c.field-meta.xml
<CustomField>
    <fullName>Recent_Lead_Source_Date__c</fullName>
    <description>assist in lead to case</description>
    <label>Recent Lead Source Date</label>
    <type>DateTime</type>
</CustomField>