News UAT/force-app/main/default/objects/Contact/fields/RecentLeadSourceDetail__c.field-meta.xml
<CustomField>
    <fullName>RecentLeadSourceDetail__c</fullName>
    <description>to assist in lead to case</description>
    <label>Recent Lead Source Detail</label>
    <length>150</length>
    <type>Text</type>
</CustomField>