News UAT/force-app/main/default/objects/Contact/fields/RingLead_DMS_Status__c.field-meta.xml
<CustomField>
    <fullName>RingLead_DMS_Status__c</fullName>
    <description>Indicates when the RingLead DMS webhook has finished processing a new Marketo record and it can be synced to SFDC.  Values can include &#39;true&#39;, &#39;link_to_account&#39;, &#39;convert_to_contact&#39;, and &#39;Orphan:[SFDC record ID]&#39;.  Also, if an existing SFDC record is not synced to Marketo and it is a duplicate of a new Marketo record, the value will be set to &#39;SF_Orphan:[Marketo record ID].</description>
    <label>RingLead DMS Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>