News UAT/force-app/main/default/objects/Contact/validationRules/Contact_Change_Digital_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Change_Digital_Account</fullName>
    <active>true</active>
    <description>User cannot change contact&#39;s digital account to non-digital account</description>
    <errorConditionFormula>AND(
ISCHANGED( AccountId ), NOT(ISPICKVAL(Account.Digital_Status__c, &#39;Active&#39;)),
ISPICKVAL(Digital_Status__c, &#39;Active&#39;)
)</errorConditionFormula>
    <errorMessage>The associated account is not yet a digital customer. Please make the new account a digital media customer before updating the contact</errorMessage>
</ValidationRule>