News UAT/force-app/main/default/objects/Contact/validationRules/Contact_First_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_First_Name_Required</fullName>
    <active>true</active>
    <description>Make First Name Required for Save</description>
    <errorConditionFormula>ISBLANK(FirstName)</errorConditionFormula>
    <errorMessage>You must specify a First Name before saving this record.</errorMessage>
</ValidationRule>