News UAT/force-app/main/default/objects/Contact/validationRules/Contact_Lead_Source_Detail_No_Updates.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Lead_Source_Detail_No_Updates</fullName>
    <active>true</active>
    <description>Cannot change the Lead Source to another value once it is set from blank.</description>
    <errorConditionFormula>AND( 
NOT(ISBLANK(PRIORVALUE(Lead_Source_Detail__c))), 
PRIORVALUE(Lead_Source_Detail__c) != Lead_Source_Detail__c 
)</errorConditionFormula>
    <errorDisplayField>Lead_Source_Detail__c</errorDisplayField>
    <errorMessage>Lead Source Detail cannot be changed to another value once entered.</errorMessage>
</ValidationRule>