News UAT/force-app/main/default/objects/Contact/listViews/All_Active_Contacts.listView-meta.xml
<ListView>
    <fullName>All_Active_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>Contact_Status__c</columns>
    <columns>CONTACT.IS_PERSON_ACCOUNT</columns>
    <columns>Alert_Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Dentsu Mitchell Media</value>
    </filters>
    <label>Dentsu Mitchell Contacts</label>
</ListView>